# vibe-check

./: .gitignore  .safeguard.example.yaml  README.md  flow_test_report.md  flow_test_results.json  pyproject.toml  run_flow_tests.py  run_scan.py  security-report-2025-12-23.md  security-report-2025-12-25-2.md  security-report-2025-12-26-2.md
ai_flow_tester/: __init__.py
ai_flow_tester/src/: __init__.py  analyzers.py  generators.py  runner.py  selectors.py
security_scanner/: __init__.py
security_scanner/src/: __init__.py  checklist.py  scanner.py
shared/: __init__.py
shared/src/: __init__.py  cli.py  llm_client.py
web-app/: .env.example  package-lock.json  package.json  vercel.json
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/app/api/flow-check/: route.ts
web-app/app/api/github/callback/: route.ts
web-app/app/api/scan/: route.ts
